<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:background="@drawable/gradient_profile"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".activities.ProfileActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_profile"/>

        <TextView
            android:id="@+id/tvDato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:text="Usuario"
            android:textColor="@color/colorWhite"
            android:textSize="40sp"/>

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDato"
            android:layout_marginLeft="20dp"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="4dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"/>

                <EditText
                    android:id="@+id/etName"
                    android:drawableRight="@drawable/ic_person"
                    android:hint="ingrese nombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"/>

                <EditText
                    android:id="@+id/etEmail"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="ingrese correo electronico"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dni" />

                <EditText
                    android:id="@+id/etDni"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="ingrese dni"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cargo"/>

                <EditText
                    android:id="@+id/etCargo"
                    android:drawableRight="@drawable/ic_email"
                    android:hint="ingrese cargo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"/>

                <EditText
                    android:id="@+id/etPassword"
                    android:drawableRight="@drawable/ic_lock"
                    android:hint="ingrese password"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/btUpdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/gradient_bt"
                    android:text="@string/update_profile"
                    android:textColor="@color/colorWhite" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
        <TextView
            android:id="@+id/tvProyectos"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_width="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:text="Proyectos"
            android:textColor="@color/colorWhite"/>
      <TextView
            android:id="@+id/tvLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvProyectos"
            android:textSize="20sp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/logout"
            android:textColor="@color/colorWhite" />

        <TextView
            android:id="@+id/tvDelete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvLogOut"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:text="@string/delete"
            android:textColor="@color/colorWhite" />

</RelativeLayout>
</ScrollView>
