<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    android:background="@drawable/gradient">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_chrome_reader"/>
        <TextView
            android:id="@+id/IniciarSesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imageView"
            android:layout_centerHorizontal="true"
            android:text="Iniciar Sesión"
            android:textStyle="bold"
            android:textColor="@color/colorBlanco"
            android:textAlignment="center"
            android:textSize="45sp" />


        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="100dp"
            android:layout_centerInParent="true"
            android:padding="20dp"
            app:cardCornerRadius="24dp"
            app:cardElevation="4dp">


            <LinearLayout
                android:orientation="vertical"
                android:padding="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etEmail"
                    android:drawableStart="@drawable/ic_email"
                    android:padding="12dp"
                    android:textSize="20sp"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    app:passwordToggleEnabled="true"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/etPassword"
                    android:drawableStart="@drawable/ic_lock"
                    android:padding="12dp"
                    android:hint="@string/password"
                    android:textSize="20sp"
                    android:inputType="textPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                </android.support.design.widget.TextInputLayout>
                <Button
                    android:id="@+id/btLogin"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/gradient_bt"
                    android:text="INGRESAR"
                    android:textSize="20sp"
                    android:textColor="@color/colorWhite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/cardView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:textSize="24sp"
            android:text="@string/have_not_an_account"
            android:textColor="@color/colorWhite"/>

    </RelativeLayout>

</ScrollView>
